# computer-graphics

./: CMakeLists.txt
assignments/task2/: CMakeLists.txt  main.cpp
assignments/task3/: CMakeLists.txt  main.cpp
assignments/task4/: CMakeLists.txt  main.cpp
assignments/task5/: CMakeLists.txt  main.cpp
include/model/: AABB.h  Camera.cpp  Camera.h  DirectionalLight.h  Light.h  LightSource.h  ObjectCache.h  Point.h  PointLight.h  Ray.h  Sphere.h  SpotLight.h  Tile.h
include/model/Objects/: Cilinder.cpp  Cilinder.h  Cone.cpp  Cone.h  Mesh.cpp  Mesh.h  Object.h  Plane.cpp  Plane.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
include/operations/: Operations.h  Shading.cpp  Shading.h
resources/: fragment.frag  vertex.vert
src/: main.cpp
